--- a/Dashboard_Config.json
+++ b/Dashboard_Config.json
@@ -1,73 +1,4 @@
 {
-  "__inputs": [
-    {
-      "name": "DS_PROMETHEUS",
-      "label": "prometheus",
-      "description": "",
-      "type": "datasource",
-      "pluginId": "prometheus",
-      "pluginName": "Prometheus"
-    },
-    {
-      "name": "DS_LOKI",
-      "label": "loki",
-      "description": "",
-      "type": "datasource",
-      "pluginId": "loki",
-      "pluginName": "Loki"
-    }
-  ],
-  "__elements": {},
-  "__requires": [
-    {
-      "type": "panel",
-      "id": "canvas",
-      "name": "Canvas",
-      "version": ""
-    },
-    {
-      "type": "panel",
-      "id": "gauge",
-      "name": "Gauge",
-      "version": ""
-    },
-    {
-      "type": "grafana",
-      "id": "grafana",
-      "name": "Grafana",
-      "version": "11.1.0"
-    },
-    {
-      "type": "panel",
-      "id": "logs",
-      "name": "Logs",
-      "version": ""
-    },
-    {
-      "type": "datasource",
-      "id": "loki",
-      "name": "Loki",
-      "version": "1.0.0"
-    },
-    {
-      "type": "datasource",
-      "id": "prometheus",
-      "name": "Prometheus",
-      "version": "1.0.0"
-    },
-    {
-      "type": "panel",
-      "id": "stat",
-      "name": "Stat",
-      "version": ""
-    },
-    {
-      "type": "panel",
-      "id": "timeseries",
-      "name": "Time series",
-      "version": ""
-    }
-  ],
   "annotations": {
     "list": [
       {
@@ -87,14 +18,14 @@
   "editable": true,
   "fiscalYearStartMonth": 0,
   "graphTooltip": 0,
-  "id": null,
+  "id": 1,
   "links": [],
   "liveNow": true,
   "panels": [
     {
       "datasource": {
         "type": "prometheus",
-        "uid": "${DS_PROMETHEUS}"
+        "uid": "fdrdnwucxkz5se"
       },
       "fieldConfig": {
         "defaults": {
@@ -232,7 +163,7 @@
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "fdrdnwucxkz5se"
           },
           "disableTextWrap": false,
           "editorMode": "builder",
@@ -251,7 +182,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "${DS_LOKI}"
+        "uid": "fdrgofznm0v7kc"
       },
       "description": "",
       "fieldConfig": {
@@ -318,7 +249,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "fdrgofznm0v7kc"
           },
           "editorMode": "builder",
           "expr": "{RepeaterSide=\"Backend/Service\"} |= `stop` | line_format `Stopped`",
@@ -329,7 +260,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "fdrgofznm0v7kc"
           },
           "editorMode": "builder",
           "expr": "{RepeaterSide=\"Backend/Service\"} |= `start` | line_format `Running`",
@@ -362,7 +293,7 @@
     {
       "datasource": {
         "type": "prometheus",
-        "uid": "${DS_PROMETHEUS}"
+        "uid": "fdrdnwucxkz5se"
       },
       "fieldConfig": {
         "defaults": {
@@ -444,7 +375,7 @@
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "fdrdnwucxkz5se"
           },
           "disableTextWrap": false,
           "editorMode": "builder",
@@ -466,7 +397,7 @@
     {
       "datasource": {
         "type": "prometheus",
-        "uid": "${DS_PROMETHEUS}"
+        "uid": "fdrdnwucxkz5se"
       },
       "description": "Project requirements specified 30ms or less",
       "fieldConfig": {
@@ -531,11 +462,11 @@
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "fdrdnwucxkz5se"
           },
           "disableTextWrap": false,
           "editorMode": "builder",
-          "expr": "rate(packetHandling_sum[$__rate_interval]) / rate(packetHandling_count[$__rate_interval])",
+          "expr": "rate(packetHandling_sum{job=\"unknown_service:UDP_Repeater_Service\"}[$__rate_interval]) / rate(packetHandling_count{job=\"unknown_service:UDP_Repeater_Service\"}[$__rate_interval])",
           "fullMetaSearch": false,
           "hide": false,
           "includeNullMetadata": true,
@@ -551,7 +482,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "${DS_LOKI}"
+        "uid": "fdrgofznm0v7kc"
       },
       "description": "",
       "gridPos": {
@@ -576,7 +507,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "fdrgofznm0v7kc"
           },
           "editorMode": "builder",
           "expr": "{RepeaterSide=\"Backend/Service\"}",
@@ -587,7 +518,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "fdrgofznm0v7kc"
           },
           "editorMode": "builder",
           "expr": "{RepeaterSide=\"Frontend/Interface\"} |= ``",
@@ -609,7 +540,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "${DS_LOKI}"
+        "uid": "fdrgofznm0v7kc"
       },
       "fieldConfig": {
         "defaults": {
@@ -662,7 +593,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "fdrgofznm0v7kc"
           },
           "editorMode": "builder",
           "expr": "sum(count_over_time({RepeaterSide=\"Backend/Service\"} |= `Error` [$__auto]))",
@@ -683,7 +614,7 @@
     {
       "datasource": {
         "type": "prometheus",
-        "uid": "${DS_PROMETHEUS}"
+        "uid": "fdrdnwucxkz5se"
       },
       "fieldConfig": {
         "defaults": {
@@ -745,7 +676,7 @@
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "fdrdnwucxkz5se"
           },
           "disableTextWrap": false,
           "editorMode": "builder",
@@ -764,7 +695,7 @@
     {
       "datasource": {
         "type": "prometheus",
-        "uid": "${DS_PROMETHEUS}"
+        "uid": "fdrdnwucxkz5se"
       },
       "fieldConfig": {
         "defaults": {
@@ -827,7 +758,7 @@
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "fdrdnwucxkz5se"
           },
           "disableTextWrap": false,
           "editorMode": "builder",
@@ -850,7 +781,7 @@
     "list": []
   },
   "time": {
-    "from": "now-12h",
+    "from": "now-30m",
     "to": "now"
   },
   "timepicker": {
@@ -870,6 +801,6 @@
   "timezone": "browser",
   "title": "RepeaterDashboard",
   "uid": "ddrdno3tbvp4wc",
-  "version": 42,
+  "version": 48,
   "weekStart": ""
 }
